# testcontainers_fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
testcontainers_fastapi/: main.py  router.py
tests/: conftest.py  test_export_sql.py
